# search_engine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.txt  SearchServer.cpp  SearchServer.h  exeptionClass.cpp  exeptionClass.h  main.cpp
CPPfiles/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  exeptionClass.cpp  main.cpp
Tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchEngine_test.cpp
config/: base1.txt  base4.txt  config.json  requests.json
headers/: AnswersNotFoundExeption.h  ConverterJSON.h  InvertedIndex.h  SearchServer.h
include/: ConverterJSON.h  InvertedIndex.h  RequestNotFoundExeption.h  SearchServer.h  exeptionClass.h
nlohmann_json/: Makefile
nlohmann_json/cmake/: ci.cmake
nlohmann_json/include/nlohmann/: json.hpp
nlohmann_json/include/nlohmann/detail/conversions/: from_json.hpp  to_json.hpp
nlohmann_json/single_include/nlohmann/: json.hpp
nlohmann_json/tests/abi/include/nlohmann/: json_v3_10_5.hpp
nlohmann_json/tools/serve_header/: serve_header.py
src/: AnswersNotFoundExeption.cpp  ConverterJSON.cpp  InvertedIndex.cpp  RequestNotFoundExeption.cpp  SearchServer.cpp  main.cpp
